# so2-projekt

./: .gitignore  CMakeLists.txt  chopstick.cpp  chopstick.hpp  main.cpp  philosopher.cpp  philosopher.hpp  visualization.cpp  visualization.hpp
